--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,15 +1,16 @@
-<div class="mx-auto md:w-2/3 w-full flex">
-  <div class="mx-auto">
-    <% if notice.present? %>
-      <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
-    <% end %>
+<div class="mx-auto md:w-2/3 w-full flex flex-col items-center justify-center space-y-8">
+  <% if notice.present? %>
+    <p class="py-2 px-3 bg-green-50 text-green-500 font-medium rounded-lg" id="notice"><%= notice %></p>
+  <% end %>
 
-    <%= render @category %>
+  <div class="bg-white p-8 rounded-lg shadow-lg">
+    <h2 class="text-2xl font-medium text-blue-400 mb-4 text-center"><%= @category.name %></h2>
+    <p class="text-gray-700 text-center"><%= @category.description %></p>
 
-    <%= link_to 'Edit this category', edit_category_path(@category), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <div class="inline-block ml-2">
-      <%= button_to 'Destroy this category', category_path(@category), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
+    <div class="flex justify-center space-x-4 mt-8">
+      <%= link_to 'Edit', edit_category_path(@category), class: "px-6 py-2 bg-gray-100 rounded-lg shadow-md text-gray-800 font-medium hover:bg-gray-200" %>
+      <%= button_to 'Delete', category_path(@category), method: :delete, class: "px-6 py-2 bg-red-500 rounded-lg shadow-md text-white font-medium hover:bg-red-600", data: { confirm: 'Are you sure?' } %>
+      <%= link_to 'Back', categories_path, class: "px-6 py-2 bg-blue-400 rounded-lg shadow-md text-white font-medium hover:bg-blue-500" %>
     </div>
-    <%= link_to 'Back to categories', categories_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
   </div>
 </div>
