--- a/app/views/customers/menu.html.erb
+++ b/app/views/customers/menu.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 <div class="grid grid-cols-3 gap-4 w-full">
   <div class="col-span-2">
-    <h1 class="font-bold text-4xl">Takeout Menu</h1>
+    <h1 class="font-bold text-4xl">Snack Genie Menu</h1>
     <p>Start your order here</p>
     <section class="mt-6">
       <h3 class="font-semibold text-2xl text-center">Appetizers</h3>
