--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,6 +1,6 @@
 <nav class="flex justify-between bg-gray-800 text-white py-4">
   <span class="font-semibold px-4">
-    <%= link_to "ONLINE ORDER TAKEOUT APP", root_path %>
+    <%= link_to "SNACK GENIE APP", root_path %>
   </span>
   <div class="px-4 text-gray-200">
    <%= link_to "Categories", categories_path, class: "pr-4 hover:font-medium hover:text-white" %>
