--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,14 +1,14 @@
-<div class="w-full">
+<div class="w-full mx-auto max-w-xl rounded-lg shadow-lg bg-white">
   <% if notice.present? %>
     <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
   <% end %>
 
-  <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Categories</h1>
-    <%= link_to 'New category', new_category_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
-  </div>
+  <div class="p-8">
+    <h1 class="font-bold text-4xl mb-8">Categories</h1>
+    <%= link_to 'Add New category', new_category_path, class: "rounded-lg py-3 px-5 bg-blue-600 hover:bg-blue-700 text-white block font-medium mb-8" %>
 
-  <div id="categories" class="min-w-full">
-    <%= render @categories %>
+    <div id="categories" class="min-w-full">
+      <%= render @categories %>
+    </div>
   </div>
 </div>
