--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,5 +1,13 @@
-
-<div>
-  <h1 class="font-bold text-4xl">Takeout App</h1>
-  <p>Order online and pickup when ready</p>
+<div class="w-full mx-auto">
+  <div class="text-center">
+    <h1 class="text-4xl font-bold text-blue-400 mb-4">Welcome to Snack Genie</h1>
+    <p class="text-lg text-gray-700 mb-8">The easiest way to order snacks online and pick them up when you're ready.</p>
+  </div>
+  <div class="grid grid-cols-2 md:grid-cols-1 lg:grid-cols-1 gap-10 justify-items-center">
+    <div class="p-6 bg-white rounded-lg shadow-md">
+      <h2 class="text-lg font-medium text-blue-400 mb-2">Browse our snacks</h2>
+      <p class="text-gray-700">Find your favorite snacks or discover new ones from our wide selection of treats.</p>
+      <%= link_to 'Browse Snacks', customers_menu_path, class: "mt-4 inline-block px-4 py-2 bg-blue-400 hover:bg-blue-500 text-white rounded-lg font-medium" %>
+    </div>
+  </div>
 </div>
