--- a/app/views/menu_items/index.html.erb
+++ b/app/views/menu_items/index.html.erb
@@ -8,7 +8,18 @@
     <%= link_to 'New menu item', new_menu_item_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
-  <div id="menu_items" class="min-w-full">
-    <%= render @menu_items %>
+  <div id="menu_items" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
+    <% @menu_items.each do |menu_item| %>
+      <div class="bg-white rounded-lg shadow-md">
+       <div class="p-6">
+          <h2 class="text-lg font-medium text-blue-400 mb-2"><%= menu_item.name %></h2>
+          <p class="text-gray-700"><%= menu_item.description %></p>
+          <div class="flex justify-between items-center mt-4">
+            <p class="font-medium text-gray-500"><%= number_to_currency(menu_item.price) %></p>
+            <%= link_to 'View', menu_item_path(menu_item), class: "rounded-lg py-2 px-4 bg-blue-400 hover:bg-blue-500 text-white font-medium" %>
+          </div>
+        </div>
+      </div>
+    <% end %>
   </div>
 </div>
